crates/as2_codegen/src/snapshots/rascal_as2_codegen__tests__all_samples@regressions__ruffle_avm1_edittext_drag_select.as.snap
---
source: crates/as2_codegen/src/tests.rs
expression: result
input_file: samples/as2/regressions/ruffle_avm1_edittext_drag_select.as
---
initializer:
  actions:
    - ConstantPool:
        - listener
        - Object
        - onMouseDown
        - "Mouse down: "
        - _root
        - _xmouse
        - ","
        - _ymouse
        - onMouseUp
        - "Mouse up: "
        - "<selection>"
        - text
        - replaceSel
        - "Text: "
        - "\\n"
        - "\n"
        - "\r"
        - split
        - join
        - Key
        - addListener
        - Mouse
    - Push:
        - Constant: 0
        - Integer: 0
        - Constant: 1
    - NewObject
    - DefineLocal
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 2
    - DefineFunction:
        name: ""
        params: []
        actions:
          actions:
            - Push:
                - Constant: 3
                - Constant: 4
            - GetVariable
            - Push:
                - Constant: 5
            - GetMember
            - Add2
            - Push:
                - Constant: 6
            - Add2
            - Push:
                - Constant: 4
            - GetVariable
            - Push:
                - Constant: 7
            - GetMember
            - Add2
            - Trace
          label_positions: {}
    - SetMember
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Constant: 8
    - DefineFunction:
        name: ""
        params: []
        actions:
          actions:
            - Push:
                - Constant: 9
                - Constant: 4
            - GetVariable
            - Push:
                - Constant: 5
            - GetMember
            - Add2
            - Push:
                - Constant: 6
            - Add2
            - Push:
                - Constant: 4
            - GetVariable
            - Push:
                - Constant: 7
            - GetMember
            - Add2
            - Trace
            - Push:
                - Constant: 10
                - Integer: 1
                - Constant: 11
            - GetVariable
            - Push:
                - Constant: 12
            - CallMethod
            - Pop
            - Push:
                - Constant: 13
                - Constant: 14
                - Integer: 1
                - Constant: 15
                - Integer: 1
                - Constant: 14
                - Integer: 1
                - Constant: 16
                - Integer: 1
                - Constant: 11
            - GetVariable
            - Push:
                - Constant: 11
            - GetMember
            - Push:
                - Constant: 17
            - CallMethod
            - Push:
                - Constant: 18
            - CallMethod
            - Push:
                - Constant: 17
            - CallMethod
            - Push:
                - Constant: 18
            - CallMethod
            - Add2
            - Trace
          label_positions: {}
    - SetMember
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 1
        - Constant: 19
    - GetVariable
    - Push:
        - Constant: 20
    - CallMethod
    - Pop
    - Push:
        - Constant: 0
    - GetVariable
    - Push:
        - Integer: 1
        - Constant: 21
    - GetVariable
    - Push:
        - Constant: 20
    - CallMethod
    - Pop
  label_positions: {}
extra_modules: []
swf_version: 15
